[gd_scene load_steps=49 format=2]

[ext_resource path="res://sprites/Minotaur/Minotaur.gd" type="Script" id=1]
[ext_resource path="res://sprites/Minotaur/Idle/tile000.png" type="Texture" id=2]
[ext_resource path="res://sprites/Minotaur/Idle/tile001.png" type="Texture" id=3]
[ext_resource path="res://sprites/Minotaur/Idle/tile002.png" type="Texture" id=4]
[ext_resource path="res://sprites/Minotaur/Idle/tile003.png" type="Texture" id=5]
[ext_resource path="res://sprites/Minotaur/Idle/tile004.png" type="Texture" id=6]
[ext_resource path="res://sprites/Minotaur/walk/tile011.png" type="Texture" id=7]
[ext_resource path="res://sprites/Minotaur/walk/tile012.png" type="Texture" id=8]
[ext_resource path="res://sprites/Minotaur/walk/tile013.png" type="Texture" id=9]
[ext_resource path="res://sprites/Minotaur/walk/tile014.png" type="Texture" id=10]
[ext_resource path="res://sprites/Minotaur/walk/tile015.png" type="Texture" id=11]
[ext_resource path="res://sprites/Minotaur/walk/tile016.png" type="Texture" id=12]
[ext_resource path="res://sprites/Minotaur/walk/tile017.png" type="Texture" id=13]
[ext_resource path="res://sprites/Minotaur/walk/tile018.png" type="Texture" id=14]
[ext_resource path="res://sprites/Minotaur/Death/tile099.png" type="Texture" id=15]
[ext_resource path="res://sprites/Minotaur/Death/tile100.png" type="Texture" id=16]
[ext_resource path="res://sprites/Minotaur/Death/tile101.png" type="Texture" id=17]
[ext_resource path="res://sprites/Minotaur/Death/tile102.png" type="Texture" id=18]
[ext_resource path="res://sprites/Minotaur/Death/tile103.png" type="Texture" id=19]
[ext_resource path="res://sprites/Minotaur/Death/tile104.png" type="Texture" id=20]
[ext_resource path="res://sprites/Minotaur/Attack2/tile044.png" type="Texture" id=21]
[ext_resource path="res://sprites/Minotaur/Attack2/tile045.png" type="Texture" id=22]
[ext_resource path="res://sprites/Minotaur/Attack2/tile046.png" type="Texture" id=23]
[ext_resource path="res://sprites/Minotaur/Attack2/tile047.png" type="Texture" id=24]
[ext_resource path="res://sprites/Minotaur/Attack2/tile048.png" type="Texture" id=25]
[ext_resource path="res://sprites/Minotaur/Attack3/tile066.png" type="Texture" id=26]
[ext_resource path="res://sprites/Minotaur/Attack3/tile067.png" type="Texture" id=27]
[ext_resource path="res://sprites/Minotaur/Attack3/tile068.png" type="Texture" id=28]
[ext_resource path="res://sprites/Minotaur/Attack3/tile069.png" type="Texture" id=29]
[ext_resource path="res://sprites/Minotaur/Attack3/tile070.png" type="Texture" id=30]
[ext_resource path="res://sprites/Minotaur/Attack3/tile071.png" type="Texture" id=31]
[ext_resource path="res://sprites/Minotaur/Attack3/tile072.png" type="Texture" id=32]
[ext_resource path="res://sprites/Minotaur/Attack3/tile073.png" type="Texture" id=33]
[ext_resource path="res://sprites/Minotaur/Attack3/tile074.png" type="Texture" id=34]
[ext_resource path="res://sprites/Minotaur/Attack1/tile033.png" type="Texture" id=35]
[ext_resource path="res://sprites/Minotaur/Attack1/tile034.png" type="Texture" id=36]
[ext_resource path="res://sprites/Minotaur/Attack1/tile035.png" type="Texture" id=37]
[ext_resource path="res://sprites/Minotaur/Attack1/tile036.png" type="Texture" id=38]
[ext_resource path="res://sprites/Minotaur/Attack1/tile037.png" type="Texture" id=39]
[ext_resource path="res://sprites/Minotaur/Attack1/tile038.png" type="Texture" id=40]
[ext_resource path="res://sprites/Minotaur/Attack1/tile039.png" type="Texture" id=41]
[ext_resource path="res://sprites/Minotaur/Attack1/tile040.png" type="Texture" id=42]
[ext_resource path="res://sprites/Minotaur/Attack1/tile041.png" type="Texture" id=43]
[ext_resource path="res://UI/HealthBar.gd" type="Script" id=44]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": false,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ) ],
"loop": true,
"name": "attack_stab",
"speed": 10.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ) ],
"loop": false,
"name": "attack_back",
"speed": 10.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ) ],
"loop": false,
"name": "attack_basic",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.5828, 19.2688 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.2524, 26.2125 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 13.1166, 10 )

[node name="Minotaur" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.203903, -0.203907 )
frames = SubResource( 1 )
animation = "attack_back"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.03971, -5.65166 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 10.968, 1.23208 )
enabled = true
cast_to = Vector2( 0, 18 )

[node name="HealthBar" type="ColorRect" parent="."]
margin_left = -8.65378
margin_top = -27.5523
margin_right = 6.34622
margin_bottom = -25.5523
script = ExtResource( 44 )
factor = 5

[node name="Area2D" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 26.3039, -10.1953 )

[node name="CollisionShape2D_1" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Area2D_B" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( -35.5058, 2.77389 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_B"]
shape = SubResource( 4 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
